--- a/style.css
+++ b/style.css
@@ -285,6 +285,55 @@ body {
   background: linear-gradient(45deg, var(--text-color-green) 26%, #80ea6e 89%);
 }
 
+.search-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 1.5rem;
+}
+
+.search-container label {
+  visibility: hidden;
+}
+
+.search-container input {
+  width: 40%;
+  max-width: 600px;
+  padding: 0.75rem 1.25rem;
+  border: 1px solid #d9e9e9;
+  border-radius: 0.25rem;
+  font-family: var(--font-open-sans);
+  font-size: 1rem;
+}
+
+.search-container input:focus {
+  outline: none;
+  border-color: #6db33f;
+}
+
+input[type='search']::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  appearance: none;
+  display: none;
+}
+
+.clear-input-btn {
+  background: none;
+  border: none;
+  position: relative;
+  right: 2rem;
+  cursor: pointer;
+}
+
+.results-not-found {
+  font-family: var(--font-open-sans);
+  font-weight: 400;
+  font-size: 2rem;
+  color: #61717d;
+  padding: 2rem;
+}
+
 .items-container {
   padding: var(--size-3rem) var(--size-2rem) 0 var(--size-2rem);
 }
@@ -505,6 +554,14 @@ body {
     margin: 0;
     padding: var(--size-3rem) var(--size-2rem);
   }
+
+  .search-container label {
+    display: none;
+  }
+
+  .search-container input {
+    width: 80%;
+  }
 }
 
 @media (max-width: 800px) {
@@ -513,5 +570,8 @@ body {
   }
   .list-item {
     width: 100%;
+  }
+  .results-not-found {
+    font-size: 1.2rem;
   }
 }
