--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ body {
   background-color: var(--bg-color-white);
   box-shadow: 0 5px 30px 0 #6c878780;
   list-style: none;
-  line-height: 1.5rem;
+  line-height: var(--spacing-lg);
   font-size: var(--spacing-sm);
 }
 
@@ -530,8 +530,8 @@ input[type='search']::-webkit-search-cancel-button {
   .side-menu-navigation span::after {
     content: '';
     display: inline-block;
-    width: 1.25rem;
-    height: 1.25rem;
+    width: var(--spacing-md);
+    height: var(--spacing-md);
     background-image: url('assets/icons/down-arrow-backup-2-svgrepo-com.svg');
     background-repeat: no-repeat;
     background-size: contain;
