--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   --spacing-page-side-md: 5%;
   --spacing-page-side-lg: 9%;
   --spacing-page-side-xl: 10%;
+  --spacing-xxxs: 0.3125rem;
   --spacing-xxs: 0.375rem;
   --spacing-xs: 0.5rem;
   --spacing-s: 0.75rem;
@@ -27,6 +28,8 @@
   --bg-color-projects: #ebf2f2;
   --bg-color-white: #fff;
   --bg-color-light-green: #80ea6e;
+  --border-color-light-blue: #d9e9e9;
+  --border-color-grey: #ffffff66;
   --color-charcoal: #191e1e;
   --font-open-sans: 'Open Sans', sans-serif;
   --font-metropolis: 'Metropolis', sans-serif;
@@ -149,7 +152,7 @@ body {
   justify-content: space-between;
   align-items: var(--align-center);
   flex-shrink: 0;
-  gap: 0.3125rem;
+  gap: var(--spacing-xxxs);
   font-weight: 500;
   height: 100%;
 }
@@ -320,7 +323,7 @@ body {
   width: 40%;
   max-width: 600px;
   padding: var(--spacing-sm) var(--spacing-xl);
-  border: 1px solid #d9e9e9;
+  border: 1px solid var(--border-color-light-blue);
   border-radius: 0.25rem;
   font-family: var(--font-open-sans);
   font-size: var(--spacing-sm);
@@ -341,7 +344,7 @@ input[type='search']::-webkit-search-cancel-button {
   background: none;
   border: none;
   position: relative;
-  right: 2rem;
+  right: var(--spacing-xl);
   cursor: pointer;
 }
 
@@ -370,7 +373,7 @@ input[type='search']::-webkit-search-cancel-button {
 .list-item a {
   display: block;
   width: 100%;
-  border: 1px solid #d9e9e9;
+  border: 1px solid var(--border-color-light-blue);
   border-radius: 5px;
   text-decoration: none;
   color: var(--text-color);
@@ -479,7 +482,7 @@ input[type='search']::-webkit-search-cancel-button {
     cursor: pointer;
     top: 0;
     right: var(--spacing-sm);
-    z-index: 1001;
+    z-index: 100;
   }
   .cross-icon button {
     all: unset;
@@ -495,7 +498,7 @@ input[type='search']::-webkit-search-cancel-button {
     width: 100%;
     height: 100%;
     background-color: var(--color-charcoal);
-    z-index: 1000;
+    z-index: 10;
     transform: translateY(-100%);
     transition: transform 0.3s ease-in-out;
   }
@@ -513,7 +516,7 @@ input[type='search']::-webkit-search-cancel-button {
     justify-content: space-between;
     height: 60px;
     line-height: var(--spacing-xxl);
-    border-bottom: 1px solid hsla(0, 0%, 100%, 0.4);
+    border-bottom: 1px solid var(--border-color-grey);
     color: var(--bg-color-white);
     font-family: var(--font-open-sans);
     font-weight: 400;
